// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/atoms/KeyDot.vue snapshot checked 1`] = `
<button
  checked="true"
  type="button"
>
  <svg
    viewBox="-8 -8 16 16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      fill="#aaa"
      r="2.5"
    />
  </svg>
</button>
`;

exports[`src/components/atoms/KeyDot.vue snapshot not checked 1`] = `
<button
  checked="false"
  type="button"
>
  <svg
    viewBox="-8 -8 16 16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      fill="#aaa"
      r="2.5"
    />
  </svg>
</button>
`;
